--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>Hello World!!</h1>
     <img src="hello.world.png" alt="image">
     <h3>This is my First task with git.</h3>
-    <img src="/hello.12.png" alt="">
+    <img src="/hello.12.png" alt="image1">
 
 </body>
 </html>
